# Games_Engineering

./: .gitignore  CMakeLists.txt  README.md
practical_1/: main.cpp
practical_2/: Game.h  Ship.cpp  Ship.h  main.cpp
